# pdf_black_paint

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  redact_list.example.txt  requirements.txt
.devcontainer/: devcontainer.json
src/: main.py
